test/runtime/panzone/fact-stacktrace.good
fact-stacktrace.chpl:2: error: halt reached
Stacktrace

halt() at $CHPL_HOME/modules/internal/ChapelIO.chpl:679
fact() at fact-stacktrace.chpl:1
fact() at fact-stacktrace.chpl:1
fact() at fact-stacktrace.chpl:1
